// Copyright 2024 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

option features.field_presence = IMPLICIT;
option go_package = "github.com/grpc-ecosystem/codelabs/getting_started_streaming/routeguide";

package routeguide;

// Interface exported by the server.
service RouteGuide {
  /////////////////////////////////////////////////////////////////////////////
  // Codelab Hint: Define streaming RPC methods here
  /////////////////////////////////////////////////////////////////////////////
}

message Point {
  /////////////////////////////////////////////////////////////////////////////
  // Codelab Hint: Define the Point messages here
  /////////////////////////////////////////////////////////////////////////////
}

message Rectangle {
  /////////////////////////////////////////////////////////////////////////////
  // Codelab Hint: Define the Rectangle messages here
  /////////////////////////////////////////////////////////////////////////////
}

message Feature {
  /////////////////////////////////////////////////////////////////////////////
  // Codelab Hint: Define the Feature messages here
  /////////////////////////////////////////////////////////////////////////////
}


message RouteNote {
  /////////////////////////////////////////////////////////////////////////////
  // Codelab Hint: Define the RouteNote messages here
  /////////////////////////////////////////////////////////////////////////////
}

message RouteSummary {
  /////////////////////////////////////////////////////////////////////////////
  // Codelab Hint: Define the RouteSummary messages here
  /////////////////////////////////////////////////////////////////////////////
}
